# Embedded_Linux

./: AdminLinux_Task1  BashScript.sh
AdminLinux/AdminLinux_Task3/: BashScript.sh
AdminLinux/AdminLinux_Task5/: BashScript.sh
AdminLinux/Exam/backups/: backup>_< folder1>_< 12_04_2023>  backup>_< folder2>_< 12_04_2023>
AdminLinux_Task1/: BashScript.sh
AdminLinux_Task2/: Question 2 Explanation.odt  binary_search.c  main.c
AdminLinux_Task3/: README.md
AdminLinux_Task5/: README.md
EmbeddedLinux/01.CMake_Calculator_Task/: CMakeLists.txt
EmbeddedLinux/01.CMake_Calculator_Task/Include/: add.h  divide.h  sub.h
EmbeddedLinux/01.CMake_Calculator_Task/Old_Task1/: maindynamic.out  mainstatic.out
EmbeddedLinux/02.Static_Library_ATMEGA32/: README.md
EmbeddedLinux/02.Static_Library_ATMEGA32/Include/: DIO.h  std_math.h  std_types.h
EmbeddedLinux/04.TFTP_Booting/: README.md
EmbeddedLinux/05.Configuring_Kernel/: README.md
EmbeddedLinux/06.BusyBox/: README.md
EmbeddedLinux/07.Yocto/: README.md
EmbeddedLinux/07.Yocto/01.Introduction/: README.md
EmbeddedLinux/07.Yocto/02.BuildingRecipe/: README.md
EmbeddedLinux/07.Yocto/03.BuildingRecipeP2/: README.md
EmbeddedLinux/EmbeddedLinux_Task1/: CMakeLists.txt  main.c
EmbeddedLinux/EmbeddedLinux_Task1/CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
EmbeddedLinux/EmbeddedLinux_Task1/CMake/Source/: multiply.c
EmbeddedLinux/EmbeddedLinux_Task1/Source/: modulus.c  sub.c
EmbeddedLinux/EmbeddedLinux_Task4/: README.md
EmbeddedLinux/EmbeddedLinux_Task4/Include/: PORT_Private.h
EmbeddedLinux/EmbeddedLinux_Task6/: README.md
EmbeddedLinux/TFTP_Task/: README.md
EmbeddedLinux_Task1/Include/: modulus.h  multiply.h
EmbeddedLinux_Task4/: DIO.c  EL_Task4.elf  PORT.c  PORT_cfg.c  README.md  main.c
EmbeddedLinux_Task4/Include/: PORT.h  PORT_cfg.h
Exam/: README.odt  backup_script.sh
